2006.06.13
----------
- now ask in BaubleApp.create_database if the user wants to import the genera
- show a message and don't let the use open the accession or species editor
unless species or genera already exist in the database
- forgot to change GenusSynonyms.txt to new imex_csv format
- other small bugs in imex_csv and the utils message_dialog

2006.06.12
----------
- changed the format of csv import to now use the column names as they are in
the database instead of how SQLObject sees them
- changed the way dialogs are show in csv import to prevent lock ups
- tried to improve the speed of imports a bit by changing the way the rows
are inserted, we now use sqlobject.sqlbuild.Insert. though it would still probably
be faster if we got it to work by sending the entire list of values to the 
insert instead of one row at i time, i'm not sure if this is the real bottleneck
on the imports
- lots of other small fixes in csv import/export

2006.06.09
----------
- more work on csv export to make the gui more responsive
- code cleanups and docs

2006.06.08
----------
- rewrote csv importing to use gtasklets 
(http://www.gnome.org/~gjc/gtasklet/gtasklets.html) so now we have a progress 
dialog

2006.06.07
----------
- created some test for Species.str() to make sure we are getting string that
conform to proper botanical nomenclature

2006.06.06
----------
- fixed bug with setting background color on the species editor genus entry 
when a character is deleted
- fixed a bug when cancelling a dirty model in the species and accession 
editors would make further commits not commit until bauble was closed and 
possibly not commit at all
- connected the full name label in the species editor
- lots of small changes in the species editor so we can stabilize for 0.5.2
- any value from a widget that doesn't validate against the model now adds
a problem to the presenter which usually disables the ok buttons
- fixes and on the species and accession info boxes

2006.06.01
----------